--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,7 +14,7 @@ const { title } = Astro.props;
 <html lang="en" class="h-full">
 <head>
   <meta charset="UTF-8" />
-  <meta name="description" content="Gianmarco Cavallo's portfolio">
+  <meta name="description" content="Dot dagers landing.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/svg+xml" href="/favicon.png" />
   <meta name="generator" content={Astro.generator} />
